--- a/client/app/modules/core/views/elements/navbar.html
+++ b/client/app/modules/core/views/elements/navbar.html
@@ -8,19 +8,19 @@
 
   <div class="navbar-right">
     <ul class="nav navbar-nav">
-      <li class="dropdown user user-menu">
-        <a class="dropdown-toggle" data-toggle="dropdown">
-          <i class="fa fa-flag flag-icon flag-icon-{{selectLocale.country.toLowerCase() }}"></i>
-          {{ selectLocale.name | translate }} <i class="caret"></i> </span>
-        </a>
-        <ul class="dropdown-menu">
-          <li ng-repeat="(index, locale) in locales" ng-show="locale != selectLocale">
-            <a ng-click="setLocale(index)">
-              <span class="flag-icon flag-icon-{{locale.country.toLowerCase() }}"></span> {{locale.name | translate }}
-            </a>
-          </li>
-        </ul>
-      </li>
+      <!--<li class="dropdown user user-menu">-->
+      <!--  <a class="dropdown-toggle" data-toggle="dropdown">-->
+      <!--    <i class="fa fa-flag flag-icon flag-icon-{{selectLocale.country.toLowerCase() }}"></i>-->
+      <!--    {{ selectLocale.name | translate }} <i class="caret"></i> </span>-->
+      <!--  </a>-->
+      <!--  <ul class="dropdown-menu">-->
+      <!--    <li ng-repeat="(index, locale) in locales" ng-show="locale != selectLocale">-->
+      <!--      <a ng-click="setLocale(index)">-->
+      <!--        <span class="flag-icon flag-icon-{{locale.country.toLowerCase() }}"></span> {{locale.name | translate }}-->
+      <!--      </a>-->
+      <!--    </li>-->
+      <!--  </ul>-->
+      <!--</li>-->
       <li class="dropdown user user-menu">
         <a class="dropdown-toggle" data-toggle="dropdown">
           <i class="glyphicon glyphicon-user"></i>
