--- a/client/app/modules/core/views/home.html
+++ b/client/app/modules/core/views/home.html
@@ -18,7 +18,12 @@
 
           </div>
         </tab>
-        <tab heading="{{ 'Variables' | translate }}">
+        <tab select="start()" heading="{{ 'Visualizations' | translate }}">
+          <div class="row">
+            <div id="mynetwork"></div>
+          </div>
+        </tab>
+        <tab ng-show="user.roles[0].name=='admin'" heading="{{ 'Variables' | translate }}">
           <div class="row">
             <div class="col-md-6">
               <h4 translate>Current user</h4>
@@ -30,7 +35,7 @@
             </div>
           </div>
         </tab>
-        <tab heading="{{ 'Theme' | translate }}">
+        <tab ng-show="user.roles[0].name=='admin'" heading="{{ 'Theme' | translate }}">
           <div class="row">
             <div class="col-md-6">
               <h4> {{ 'Theme' | translate }}
