--- a/client/app/modules/protocols/views/list.html
+++ b/client/app/modules/protocols/views/list.html
@@ -1,4 +1,17 @@
-<div class="box" ng-repeat="item in protocols">
+  <div class="box-body">
+    <!--  <nit-advanced-searchbox-->
+    <!--    ng-model="searchParams"-->
+    <!--    parameters="availableSearchParams"-->
+    <!--    placeholder="Search...">-->
+    <!--</nit-advanced-searchbox>-->
+    <!--<pre>{{searchParams | json}}</pre>-->
+    <input autofocus="" type="text" ng-model="protocolSearch.$" class="form-control ng-pristine ng-valid ng-touched" placeholder="Find protocols">
+    <hr>
+  </div>
+
+
+
+<div class="box" ng-repeat="item in protocols | filter:protocolSearch">
   <div class="box-header">
     <h3 class="box-title">
       <a href="" ui-sref="^.view({id: item.id})">{{item.release_title}}</a>
