--- a/client/app/modules/core/views/home.html
+++ b/client/app/modules/core/views/home.html
@@ -26,7 +26,7 @@
             <div id="mynetwork"></div>
           </div>
         </tab>
-        <tab ng-show="currentUser.roles[0].name==='admin'" heading="{{ 'Variables' | translate }}">
+        <tab ng-show="isadmin" heading="{{ 'Variables' | translate }}">
           <div class="row">
             <div class="col-md-6">
               <h4 translate>Current user</h4>
@@ -38,7 +38,7 @@
             </div>
           </div>
         </tab>
-        <tab ng-show="currentUser.roles[0].name==='admin'" heading="{{ 'Theme' | translate }}">
+        <tab ng-show="isadmin" heading="{{ 'Theme' | translate }}">
           <div class="row">
             <div class="col-md-6">
               <h4> {{ 'Theme' | translate }}
