--- a/client/app/modules/users/views/list.html
+++ b/client/app/modules/users/views/list.html
@@ -6,7 +6,7 @@
           <a href="" ui-sref="app.users.view({id: user.id})">{{user.username}}</a>
           <span class="text-muted">{{user.email}}</span>
           <span ng-repeat="role in user.roles" class="label label-default">{{role.name}}</span>
-          <span class="pull-right">
+          <span ng-show="isadmin" class="pull-right">
             <div class="btn-group">
               <button class="btn btn-xs btn-default" ui-sref="app.users.password({ id: user.id })"><i class="fa fa-key"></i></button>
               <button class="btn btn-xs btn-default" ui-sref="app.users.edit({ id: user.id })"><i class="fa fa-pencil"></i></button>
