--- a/client/app/modules/users/views/main.html
+++ b/client/app/modules/users/views/main.html
@@ -1,4 +1,4 @@
-<section admin-header class="content-header" title="{{ 'Users' | translate}}"
+<section ng-show="isadmin" admin-header class="content-header" title="{{ 'Users' | translate}}"
          sub-title="{{ 'Manager your users here!' | translate}}">
   <a ui-sref=".add" class="btn btn-default btn-sm">{{ 'Add' | translate}}</a>
 </section>
