--- a/client/app/modules/protocols/views/list.html
+++ b/client/app/modules/protocols/views/list.html
@@ -44,7 +44,7 @@
 
   <div class="box-footer">
     <span class="text-muted">
-      {{item.created | date:'medium'}}
+      {{item.modified | date:'medium'}}
     </span>
   </div>
 </div>
