--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -6,7 +6,7 @@
 
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8-offset-2">
         <div class="box box-primary">
             <div class="box-header">
                 <h3 class="box-title"></h3>
@@ -23,7 +23,7 @@
     </div>
 
 
-    <div class="col-md-6">
+    <div class="col-md-6" ng-show="isadmin">
         <div class="box box-primary">
             <div class="box-header">
                 <h3 class="box-title">Protocol</h3>
