--- a/client/app/modules/protocols/views/main.html
+++ b/client/app/modules/protocols/views/main.html
@@ -1,4 +1,4 @@
 <section admin-header class="content-header" title="{{ 'Protocols' | translate }}" sub-title="{{ 'Manage your protocols here!' | translate }}">
-    <a ui-sref=".add" class="btn btn-default btn-sm" translate>Add</a>
+    <a ui-sref=".add" class="btn btn-default btn-sm" translate>Add New Protocol</a>
 </section>
 <section ui-view class="content"></section>
