--- a/client/app/modules/core/views/home.html
+++ b/client/app/modules/core/views/home.html
@@ -18,7 +18,7 @@
 
           </div>
         </tab>
-        <tab select="start()" heading="{{ 'Visualizations' | translate }}">
+        <tab select="draw()" heading="{{ 'Visualizations' | translate }}">
 
           <div class="row">
             <div ng-show="graphloaded" class="overlay"></div>
