--- a/client/app/modules/core/views/elements/small-box.html
+++ b/client/app/modules/core/views/elements/small-box.html
@@ -4,7 +4,7 @@
       <h3>{{quantity}} &nbsp;</h3>
       <p>{{ name | translate }}</p>
     </div>
-    <div class="icon"><i class="ion {{ icon }}"></i></div>
+    <div class="icon"><i class="{{ icon }}"></i></div>
     <a  class="small-box-footer" >{{ 'More info' | translate }} <i class="fa fa-arrow-circle-right"></i></a>
   </div>
 </div>
