add new style to list

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -50,3 +50,53 @@
   cursor: pointer;
 }
 
+
+
+
+/* Card List */
+
+*, *:before, *:after {box-sizing:  border-box !important;}
+.container{
+  width:92%;
+}
+a>i.fa{
+  display:inline;
+}
+.mansonry.row {
+ -moz-column-width: 27em;
+ -webkit-column-width: 27em;
+ -moz-column-gap: .6em;
+ -webkit-column-gap: .6em; 
+  
+}
+
+.panel {
+ display: inline-block;
+ margin:  .5em;
+ padding:  0; 
+ width:98%;
+}
+
+/* LIST ANIMATIONS */
+.mansonryitem {
+}
+
+.mansonryitem.ng-move,
+.mansonryitem.ng-enter,
+.mansonryitem.ng-leave {
+  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.mansonryitem.ng-leave.ng-leave-active,
+.mansonryitem.ng-move,
+.mansonryitem.ng-enter {
+  opacity:0;
+  max-height: 0px;
+}
+
+.mansonryitem.ng-leave,
+.mansonryitem.ng-move.ng-move-active,
+.mansonryitem.ng-enter.ng-enter-active {
+    opacity: 1;
+    max-height: 70px;
+}
