--- a/client/app/modules/healthcenters/views/list.html
+++ b/client/app/modules/healthcenters/views/list.html
@@ -1,50 +1,37 @@
-<div class="box" ng-repeat="item in healthcenters">
-  <div class="box-header">
-    <h3 class="box-title">
-      <a href="" ui-sref="^.view({id: item.id})">{{item.main_name}}</a>
-      <br/>
-    </h3>
 
-    <div class="box-tools pull-right">
-      
-      <span ng-show="item.ownerId==user.id||isadmin" class="pull-right btn-group" style="margin-top: 7px;">
-        <a href="" class="btn btn-xs btn-default"
-           ui-sref="^.edit({id: item.id})">
-          <i class="fa fa-pencil"></i>
-        </a>
-        <a href="" class="btn btn-xs btn-default"
-           ng-click="delete({id: item.id})">
-          <i class="fa fa-trash-o"></i>
-        </a>
-      </span>
-
-    </div>
-  </div>
-  <div class="box-body">
-    <div class="row">
-      <div class="col-sm-9" style="white-space: pre;">{{item.main_location}}</div>
-      <div class="col-sm-3">
-        <img ng-if="item.image" ng-src="{{item.image}}?id={{item.id}}"/>
+<div class="container">
+  <div class="mansonry row">
+  
+    <div class="panel panel-default mansonryitem" ng-repeat="item in healthcenters">
+     	
+     	<div class="panel-heading">
+     		   <a href="" ui-sref="^.view({id: item.id})">{{item.main_name}}</a>
+     		   
+        <div class="box-tools pull-right">
+    
+          <span ng-show="item.ownerId==$parent.user.id||$parent.isadmin" class="pull-right btn-group">
+            <a href="" class="btn btn-xs btn-default"
+               ui-sref="^.edit({id: item.id})">
+              <i class="fa fa-pencil"></i>
+            </a>
+            <a href="" class="btn btn-xs btn-default"
+               ng-click="delete({id: item.id})">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </span>
+    
+        </div>
+        
+     	</div>
+     	  
+     	<div class="panel-body">
+     	  {{item.main_location}}
       </div>
+      
     </div>
+     
+    
   </div>
-
-  <div class="box-footer">
-    <span class="text-muted">
-      {{item.created | date:'medium'}}
-    </span>
-  </div>
+  <div class="alert alert-warning" role="alert" ng-show="!healthcenters.length">There are no health centers yet. Please add one</div>
 </div>
 
-
-<div class="box" ng-show="!healthcenters.length">
-  <div class="box-header">
-    <h3 class="box-title">
-      There are no healthcenters
-    </h3>
-  </div>
-  <div class="box-body">
-    <p class="list-group-item-text" translate>Click <a href="" ui-sref="^.add">here</a>
-      to add a healthcenter!</p>
-  </div>
-</div>
