--- a/client/app/modules/protocols/views/list.html
+++ b/client/app/modules/protocols/views/list.html
@@ -53,17 +53,7 @@
     </div>
      
     
-    <div class="box" ng-show="!protocols.length">
-      <div class="box-header">
-        <h3 class="box-title">
-          There are no protocols 
-        </h3>
-      </div>
-      <div class="box-body" ng-show="$parent.filtered==='all'">
-        <p class="list-group-item-text" translate>Click <a href="" ui-sref="^.add">here</a>
-          to add a protocol!</p>
-      </div>
-    </div>
   </div>
+  <div class="alert alert-warning" role="alert" ng-show="!protocols.length">No protocols here</div>
 </div>
 
