--- a/client/app/modules/core/views/home.html
+++ b/client/app/modules/core/views/home.html
@@ -18,12 +18,17 @@
 
           </div>
         </tab>
-        <tab select="draw()" heading="{{ 'Visualizations' | translate }}">
+        <tab select="createGraph()" heading="{{ 'Visualizations' | translate }}">
 
           <div class="row">
-            <div ng-show="graphloaded" class="overlay"></div>
-            <div ng-show="graphloaded" class="loading-img"></div>
-            <vis-network ng-show="graphloaded" data="visdata" options="visoptions" events="visevents"></vis-network>
+                <div class="container">
+                  <label class="btn btn-warning" ng-model="graphbutton.protocols" btn-checkbox>Protocols</label>
+                  <label class="btn btn-danger" ng-model="graphbutton.healthcenters" btn-checkbox>Health centers</label>
+                  <label class="btn btn-primary" ng-model="graphbutton.doctors" btn-checkbox>Doctors</label>
+              
+                 <vis-network data="visdata" options="visoptions" events="visevents"></vis-network>
+                </div>
+            
           </div>
         </tab>
         <tab ng-show="isadmin" heading="{{ 'Variables' | translate }}">
