change to formly templates add multiple section and upload

--- a/client/app/modules/files/views/upload.html
+++ b/client/app/modules/files/views/upload.html
@@ -62,6 +62,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="item in uploader.queue">
+                    <td><pre>{{item.file}}</pre></td>
                     <td><strong>{{ item.file.name }}</strong>
                     </td>
                     <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB
