--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -50,6 +50,31 @@
   cursor: pointer;
 }
 
+.repeatsection{
+  padding:0;
+}
+
+/*TABS fix*/
+li.protocolform > a {
+  padding-right:0px;
+  padding-left:0px;
+  
+}
+
+/*UI-SELECT FIX*/
+.ui-select-match-text{
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 40px;
+}
+.ui-select-toggle > .btn.btn-link {
+  margin-right: 10px;
+  top: 6px;
+  position: absolute;
+  right: 10px;
+}
+
 
 /* Card List */
 
