--- a/client/app/modules/core/views/app.html
+++ b/client/app/modules/core/views/app.html
@@ -27,3 +27,121 @@
         </aside>
     </div>
 </div>
+
+
+
+
+<!-- Put custom templates here -->
+<script type="text/ng-template" id="async-ui-select.html">
+  <ui-select ng-disabled="{{to.disabled}}" on-select="to.onselect($item)" ng-model="model[options.key]" theme="bootstrap">
+    <ui-select-match placeholder="{{to.placeholder}}">{{$select.selected[to.labelProp || 'name']}}</ui-select-match>
+    <ui-select-choices repeat="option[to.valueProp || 'value'] as option in to.options | filter: $select.search"
+                       refresh="to.refresh($select.search, options)"
+                       refresh-delay="{{to.refreshDelay}}">
+      <div ng-bind-html="option[to.labelProp || 'name'] | highlight: $select.search"></div>
+    </ui-select-choices>
+  </ui-select>
+</script>
+
+<script type="text/ng-template" id="async-ui-select-multiple.html">
+
+  <ui-select multiple ng-disabled="{{to.disabled}}" on-select="to.onselect($item)" ng-model="model[options.key]" theme="bootstrap">
+    <ui-select-match placeholder="{{to.placeholder}}">{{$item[to.labelProp || 'name']}}</ui-select-match>
+    <ui-select-choices repeat="option as option in to.options | filter: $select.search"
+                       refresh="to.refresh($select.search, options)"
+                       refresh-delay="{{to.refreshDelay}}">
+      <div ng-bind-html="option[to.labelProp || 'name'] | highlight: $select.search"></div>
+    </ui-select-choices>
+  </ui-select>
+</script>
+
+<script type="text/ng-template" id="repeatSection.html">
+  <div>
+  	<!--loop through each element in model array-->
+  	<div class="{{hideRepeat}}">
+        <div class="box repeatsection" ng-repeat="element in model[options.key] track by $index" ng-init="fields = copyFields(to.fields)">
+            <div class="box-header"><h3 class="box-title">Source #{{$index+1}}</h3></div>
+            <div class="box-body">
+                <formly-form fields="fields"
+                             model="element"
+                             form="form">
+                </formly-form>
+                <div style="margin:10px;">
+                  <button type="button" class="btn btn-danger" ng-click="model[options.key].splice($index, 1)">
+                    Remove source
+                  </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="AddNewButton">
+      <button type="button" class="btn btn-primary" ng-click="addNew()" >{{to.btnText}}</button>
+    </p>
+  </div>
+</script>
+
+
+
+<script type="text/ng-template" id="fileUpload.html">
+<div style="min-height: 60px" nv-file-drop uploader="uploader">
+
+    <div class="col-sm-2">
+        <div class="input-group pull-right" style="margin-top: 5px;">
+            <span class="file-input btn btn-block btn-default btn-file">
+                {{ 'Upload files' | translate }}&hellip; <input nv-file-select type="file" uploader="uploader"/>
+            </span>
+        </div>
+    </div>
+
+
+    <div class="col-sm-10">
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th width="50%" translate>Name</th>
+                <th ng-show="uploader.isHTML5" translate>Size</th>
+                <th ng-show="uploader.isHTML5" translate>Progress</th>
+                <th translate>Status</th>
+                <th translate>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="item in uploader.queue">
+                <td><strong>{{ item.file.name }}</strong>
+                </td>
+                <td ng-show="uploader.isHTML5" nowrap>{{ item.file.size/1024/1024|number:2 }} MB
+                </td>
+                <td ng-show="uploader.isHTML5">
+                    <div class="progress" style="margin-bottom: 0;">
+                        <div class="progress-bar" role="progressbar" ng-style="{ 'width': item.progress + '%' }"></div>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                    <span ng-show="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
+                    <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                </td>
+                <td nowrap>
+                    <div class="input-group pull-right btn-group btn-group-xs">
+                        <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()"
+                                ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                            <span class="glyphicon glyphicon-upload"></span>
+                        </button>
+                        <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()"
+                                ng-disabled="!item.isUploading">
+                            <span class="glyphicon glyphicon-ban-circle"></span>
+                        </button>
+                        <button type="button" class="btn btn-danger btn-xs" ng-click="delete(item)">
+                            <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+</script>
+
