--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -134,13 +134,14 @@
         </div>
     </div>
     
-    <div class="col-md-6" ng-show="isadmin">
+    <div class="col-md-12" ng-show="isadmin">
         <div class="box box-primary">
             <div class="box-header">
                 <h3 class="box-title">Protocol</h3>
             </div>
             <div class="box-body">
                 <pre>{{protocol|json}}</pre>
+                <pre>{{protocol.intention_disease|json}}</pre>
             </div>
         </div>
     </div>
